--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </ul>
   </div>
   <p><b>💸 Rate:</b> ₹500/hour or flat per-task</p>
-  <p><b>📬 Contact:</b> Reddit: u/Worried-You-7003 or Telegram: <i>[your Telegram handle]</i></p>
+  <p><b>📬 Contact:</b> Reddit: u/Worried-You-7003]</i></p>
   <p><b>📈 Available Now!</b></p>
 </body>
 </html>
