--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nikil's Tech Services</title>
-  <meta charset="UTF-8">
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #111;
       color: #eee;
       padding: 40px;
+      margin: 0;
     }
     h1 {
       color: #4fc3f7;
@@ -18,9 +20,14 @@
       padding: 20px;
       border-radius: 10px;
       margin-top: 20px;
+      max-width: 600px;
     }
     a {
       color: #4fc3f7;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -36,7 +43,7 @@
     </ul>
   </div>
   <p><b>💸 Rate:</b> ₹500/hour or flat per-task</p>
-  <p><b>📬 Contact:</b> Reddit: u/Worried-You-7003</i></p>
+  <p><b>📬 Contact:</b> <a href="https://www.reddit.com/user/Worried-You-7003" target="_blank" rel="noopener noreferrer">u/Worried-You-7003</a></p>
   <p><b>📈 Available Now!</b></p>
 </body>
 </html>
