--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
       color: #eee;
       padding: 40px;
       margin: 0;
+      overflow-x: hidden;
     }
     h1 {
       color: #4fc3f7;
+      opacity: 0;
+      animation: fadeInDown 1s forwards;
     }
     .box {
       background: #222;
@@ -21,13 +24,48 @@
       border-radius: 10px;
       margin-top: 20px;
       max-width: 600px;
+      opacity: 0;
+      transform: translateX(-50px);
+      animation: slideIn 1s forwards;
+      animation-delay: 0.7s;
     }
     a {
       color: #4fc3f7;
       text-decoration: none;
+      transition: color 0.3s;
     }
     a:hover {
+      color: #81d4fa;
       text-decoration: underline;
+    }
+    p {
+      opacity: 0;
+      animation: fadeIn 1s forwards;
+    }
+    p:nth-of-type(2) { animation-delay: 1.4s; }
+    p:nth-of-type(3) { animation-delay: 1.6s; }
+    p:nth-of-type(4) { animation-delay: 1.8s; }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    @keyframes slideIn {
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
     }
   </style>
 </head>
