--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nikil's Tech Services</title>
   <style>
+    :root {
+      --bg: #111;
+      --text: #eee;
+      --accent: #4fc3f7;
+      --box: #222;
+    }
+
+    body.light {
+      --bg: #f4f4f4;
+      --text: #111;
+      --box: #fff;
+    }
+
     body {
       font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #eee;
+      background-color: var(--bg);
+      color: var(--text);
       padding: 40px;
       margin: 0;
       overflow-x: hidden;
+      transition: background 0.5s, color 0.5s;
     }
+
     h1 {
-      color: #4fc3f7;
+      color: var(--accent);
       opacity: 0;
       animation: fadeInDown 1s forwards;
     }
+
     .box {
-      background: #222;
+      background: var(--box);
       padding: 20px;
       border-radius: 10px;
       margin-top: 20px;
@@ -29,22 +45,42 @@
       animation: slideIn 1s forwards;
       animation-delay: 0.7s;
     }
-    a {
-      color: #4fc3f7;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-    a:hover {
-      color: #81d4fa;
-      text-decoration: underline;
-    }
+
     p {
       opacity: 0;
       animation: fadeIn 1s forwards;
     }
+
     p:nth-of-type(2) { animation-delay: 1.4s; }
     p:nth-of-type(3) { animation-delay: 1.6s; }
     p:nth-of-type(4) { animation-delay: 1.8s; }
+
+    a, button {
+      color: var(--accent);
+      text-decoration: none;
+      transition: all 0.3s ease;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    a:hover, button:hover {
+      color: #81d4fa;
+      text-decoration: underline;
+    }
+
+    .actions {
+      margin-top: 20px;
+    }
+
+    .toggle-btn {
+      margin-right: 20px;
+      padding: 8px 14px;
+      background: var(--box);
+      border: 1px solid var(--accent);
+      border-radius: 8px;
+    }
 
     @keyframes fadeInDown {
       from {
@@ -56,32 +92,3 @@
         transform: translateY(0);
       }
     }
-    @keyframes slideIn {
-      to {
-        opacity: 1;
-        transform: translateX(0);
-      }
-    }
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1>🧠 Nikil – Tech Services & Projects</h1>
-  <p>Offering affordable online help with:</p>
-  <div class="box">
-    <ul>
-      <li>Python scripting (Jarvis-style tools, automation)</li>
-      <li>Typing and formatting tasks</li>
-      <li>Web research or file work</li>
-      <li>Windows troubleshooting</li>
-    </ul>
-  </div>
-  <p><b>💸 Rate:</b> ₹500/hour or flat per-task</p>
-  <p><b>📬 Contact:</b> <a href="https://www.reddit.com/user/Worried-You-7003" target="_blank" rel="noopener noreferrer">u/Worried-You-7003</a></p>
-  <p><b>📈 Available Now!</b></p>
-</body>
-</html>
