--- a/index.html
+++ b/index.html
@@ -1,69 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Nikil's Tech Services</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
   <style>
     body {
-      margin: 0;
-      padding: 40px;
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #0f0f0f, #1f1f1f);
+      font-family: "Segoe UI", sans-serif;
+      background-color: #111;
       color: #eee;
-      overflow-x: hidden;
+      padding: 40px;
+      line-height: 1.6;
     }
-
     h1 {
-      font-size: 2em;
       color: #4fc3f7;
-      text-shadow: 0 0 8px #4fc3f7;
+      margin-bottom: 10px;
     }
-
     .box {
-      background: rgba(20, 20, 20, 0.8);
+      background: #222;
       padding: 20px;
-      border: 1px solid #4fc3f7;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(79, 195, 247, 0.3);
+      border-radius: 10px;
       margin-top: 20px;
     }
-
     ul {
-      list-style-type: '⚙️ ';
       padding-left: 20px;
     }
-
     a {
       color: #4fc3f7;
       text-decoration: none;
     }
-
     a:hover {
-      text-shadow: 0 0 5px #4fc3f7;
-    }
-
-    /* Simple animated background */
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: radial-gradient(#2c2c2c, #000);
-      background-size: 300% 300%;
-      animation: pulseBG 10s ease infinite;
-      z-index: -1;
-    }
-
-    @keyframes pulseBG {
-      0%, 100% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -79,7 +45,7 @@
     </ul>
   </div>
   <p><b>💸 Rate:</b> ₹500/hour or flat per-task</p>
-  <p><b>📬 Contact:</b> Reddit: <a href="https://reddit.com/u/Worried-You-7003" target="_blank">u/Worried-You-7003</a></p>
+  <p><b>📬 Contact:</b> Reddit: <a href="https://reddit.com/u/Worried-You-7003">u/Worried-You-7003</a></p>
   <p><b>📈 Available Now!</b></p>
 </body>
 </html>
